# CMake

./: .gitignore  CMakeLists.txt  README.md
cmake/: Config.cmake.in  Skyrim.cmake
